source/components/block/style.scss
@use "../../sass/mixin/ratio";
@use "../../sass/mixin/tokens";

$_: "c-block";

@include tokens.create($_, getComponentTokens($_),
    ("shadow": tokens.use($_, "shadow", 1),
        "shadow-hover": tokens.use($_, "shadow", 2),
        "radius": tokens.use($_, "border-radius", 1),
        "color-text": tokens.get($_, "color--alpha-contrast"),
        "color-background": tokens.get($_, "color--alpha"),
        "color-overlay": tokens.get($_, "color--alpha"),
        "color-secondary": tokens.get($_, "color--secondary"),
        "color-hover-background": tokens.get($_, "color--alpha-border"),
        "color-hover-overlay": tokens.get($_, "color--alpha-border"),
    ));

.#{$_} {
    position: relative;
    border-radius: tokens.get($_, "radius");
    corner-shape: tokens.get($_, "corner-shape");
    filter: tokens.get($_, "shadow");
    display: flex;
    justify-content: flex-end;
    flex-direction: row;
    background-position: center;
    background-size: cover;
    background-color: tokens.get($_, "color-background");
    text-decoration: none;

    .#{$_}__image {
        border-radius: tokens.get($_, "radius");
        corner-shape: tokens.get($_, "corner-shape");

        .c-image__image {
            border-radius: tokens.get($_, "radius");
            corner-shape: tokens.get($_, "corner-shape");
        }
    }

    .#{$_}__body {
        padding: tokens.use($_, "base", 6) tokens.use($_, "base", 3) tokens.use($_, "base", 3) tokens.use($_, "base", 3);
        width: 100%;
        z-index: 0;
        max-height: 100%;
        overflow: hidden;
        display: flex;
        flex-direction: column;
        gap: tokens.use($_, "base", 1);
        margin-top: auto;
        position: relative;

        &::after {
            content: "";
            position: absolute;
            top: 0;
            left: 0;
            height: 100%;
            width: 100%;
            background: tokens.get($_, "color-overlay");
            background: linear-gradient(180deg,
                    transparent 0,
                    transparent 14%,
                    tokens.get($_, "color-overlay") 61%,
                    tokens.get($_, "color-overlay"));
            z-index: -1;
            border-bottom-left-radius: tokens.get($_, "radius");
            border-bottom-right-radius: tokens.get($_, "radius");
        }

        .#{$_}__meta {
            display: flex;
        }
    }

    .#{$_}__floating {
        position: absolute;
        right: tokens.use($_, "base", 1);
        top: tokens.use($_, "base", 1);
        z-index: 3000;
    }

    .#{$_}__heading,
    .#{$_}__meta,
    .#{$_}__date,
    .#{$_}__content,
    .#{$_}__secondarymeta {
        margin: 0;
        color: tokens.get($_, "color-text");
        display: block;
    }

    .#{$_}__body {
        color: tokens.get($_, "color-text");
    }

    &.#{$_}--ratio-1-1 {
        @include ratio.ratio(1, 1, true);

        &:before {
            width: 0;
        }
    }

    &.#{$_}--ratio-4-3 {
        @include ratio.ratio(4, 3, true);

        &:before {
            width: 0;
        }
    }

    &.#{$_}--ratio-12-16 {
        @include ratio.ratio(12, 16, true);

        &:before {
            width: 0;
        }
    }

    &.#{$_}--ratio-16-9 {
        @include ratio.ratio(16, 9, true);

        &:before {
            width: 0;
        }
    }

    &--svg-background {
        background-size: clamp(tokens.use($_, "base", 3), 50%, tokens.use($_, "base", 8));
        background-repeat: no-repeat;
        background-color: tokens.get($_, "color-secondary");
    }
}

a.#{$_} {
    transition: all 200ms ease-out;
    cursor: pointer;

    .#{$_}__image-background:before {
        position: absolute;
        inset: 0;
        content: "";
        transition: opacity 200ms;
        background: tokens.get($_, "color-hover-overlay");
        opacity: 0;
        z-index: 1000;
    }

    &:hover {
        filter: tokens.get($_, "shadow-hover");
        background-color: tokens.get($_, "color-hover-background");
        color: inherit;
        transform: translateY(calc(0px - tokens.use($_, "base", 0.25)));

        .#{$_}__heading {
            text-decoration: underline;
        }

        .#{$_}__image-background:before {
            opacity: 0.08;
        }
    }
}

.o-grid--no-gutter>[class*="o-grid-"] .#{$_},
.o-grid--no-gutter>[class*="o-grid-"] .#{$_} [class*="c-block"],
.o-grid--no-gutter>[class*="o-grid-"] .#{$_} [class*="c-block"]:after {
    border-radius: unset;
    filter: none;
}

